# puckepy

./: .gitignore  Cargo.toml  README.md  puckepy.pyi  pyproject.toml  pyrightconfig.json  te.py
docs/: documentation.md  documentation.rst  installation.md  installation.rst
puckepy/: __init__.py
puckepy/confsampling/: __init__.py  __init__.pyi  confsampling.py  confsampling.pyi
puckepy/formalism/: __init__.py  __init__.pyi  formalism.py  formalism.pyi
puckepy/geometry/: __init__.py  geometry.py  geometry.pyi
puckepy/molfile/: __init__.py
renamed_stubs/: __init__.py
renamed_stubs/confsampling/: __init__.py
renamed_stubs/formalism/: __init__.py
renamed_stubs/inversion/: __init__.py
src/: lib.rs
src/conf_sampling/: equidistance_sphere.rs  fivering.rs  local_elevation.rs  mod.rs  peptide.rs  reconstruct_ring.rs  ring_partition.rs  sixring.rs
src/formalism/: altonasund.rs  cremerpople.rs  mod.rs  moleculefile.rs  search_atomname.rs  strausspickett.rs
src/formalism/inversion/: sixring.rs
src/geometry/: fundamental_ops.rs  mod.rs  molecule_ops.rs
src/inversion/: fivering.rs  mod.rs  sixring.rs  write_file.rs
src/molfile/: mod.rs
tests/: everything_test.py
